fix: bangla font mismatch issue in different OS #55

--- a/web/src/assets/css/index.scss
+++ b/web/src/assets/css/index.scss
@@ -2,17 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
+body * {
+  //   font-family: 'Baloo Da 2', sans-serif;
+  //   font-family: 'Noto Sans Bengali', sans-serif !important;
+  font-family: 'Hind Siliguri', sans-serif;
+}
+
 a {
-	color: inherit !important;
+  color: inherit !important;
 }
 
 a:hover {
-	color: initial;
+  color: initial;
 }
 
 input:focus,
 textarea:focus,
 button {
-	outline: none;
-	box-shadow: none;
+  outline: none;
+  box-shadow: none;
 }
