--- a/web/src/assets/css/index.scss
+++ b/web/src/assets/css/index.scss
@@ -26,3 +26,18 @@ button {
 textarea {
   resize: none;
 }
+
+article {
+  p {
+    margin-bottom: 10px;
+  }
+
+  a {
+    text-decoration: underline;
+  }
+
+  ul {
+    list-style-type: disc;
+    padding-left: 20px;
+  }
+}
